<resources>
    <string name="app_name">CulinaryGPT</string>
    <string name="tv_title_main">Welcome to CulinaryGPT!</string>
    <string name="tv_description_main">Your AI-powered culinary assistant</string>
    <string name="btn_open_chat">Chat with CulinaryGPT</string>
    <string name="btn_back_cd">Back</string>
    <string name="tv_ai_chat_assistant">CulinaryGPT Chat Assistant</string>
    <string name="btn_clear_chat_cd">Clear Chat</string>
    <string name="input_hint">Ask a question…</string>
    <string name="fab_send_message_cd">Send message</string>
    <string name="tv_username">Username</string>
    <string name="tv_title_signup">Welcome to CulinaryGPT</string>
    <string name="btn_sign_up_with_google">Sign Up with Google</string>
    <string name="btn_sign_up_with_biometrics">Sign Up with Biometrics</string>
    <string name="default_username">Biometric User</string>
</resources>